--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit Unified Sensor@^1.1.6
+	adafruit/DHT sensor library@^1.4.4
