--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@
 *.exe
 *.out
 *.app
+
+.pio
+.vscode/.browse.c_cpp.db*
+.vscode/c_cpp_properties.json
+.vscode/launch.json
+.vscode/ipch
+.pio/build/esp32dev/idedata.json
+.vscode/c_cpp_properties.json
+.pio/build/esp32dev/idedata.json
