--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit Unified Sensor@^1.1.6
 	adafruit/DHT sensor library@^1.4.4
+	knolleary/PubSubClient@^2.8
+	bblanchon/ArduinoJson@^6.19.4
