--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.4
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^6.19.4
+	mbed-seeed/BluetoothSerial@0.0.0+sha.f56002898ee8
